--- a/posts/2024-09-15-tidycensus-exploration-pt4/index.qmd
+++ b/posts/2024-09-15-tidycensus-exploration-pt4/index.qmd
@@ -67,8 +67,8 @@ load_variables(2022, "acs1", cache = TRUE) %>%
 This search led me to table "B27001" (you can identify tables using the `name` column and all characters prior to the underscore). In the `get_acs()` function, I could use the `table=` argument instead of the `variables=` (but for this work, I've narrowed the data that I want to look at to variables for children with health insurance coverage).
 
 ```{r health_insurance_vars, include=FALSE, echo=FALSE}
-(wfh_vars <- load_variables(2022, "acs1", cache = TRUE) %>% 
-  filter(str_detect(name, "B08105"))) 
+# (wfh_vars <- load_variables(2022, "acs1", cache = TRUE) %>% 
+#   filter(str_detect(name, "B08105"))) 
   # filter(str_detect(concept, "Means of Transportation")))
   # filter(str_detect(name, "B08137")))
 ```
@@ -117,8 +117,6 @@ combined_acs_data <- combined_acs_data %>%
   select(county, everything())
 ```
 
-
-
 *  Reading in a table that maps Colorado's counties to a region of the state
 
 ```{r read_colorado_regions, include=TRUE}
@@ -137,17 +135,19 @@ combined_acs_data <- combined_acs_data %>%
 
 
 ```{r}
+?moe_sum()
 combined_acs_data %>% 
   group_by(year) %>% 
   summarise(ttl_worked_from_homeE = sum(ttl_worked_from_homeE),
-            ttl_worked_from_homeM = moe_sum(ttl_worked_from_homeM)) %>% 
+            ttl_worked_from_homeM = moe_sum(ttl_worked_from_homeM, estimate = ttl_worked_from_homeE)) %>% 
   ggplot(.,
          aes(x=year,
              y=ttl_worked_from_homeE)) + 
   geom_line() + 
   geom_ribbon(aes(ymax = ttl_worked_from_homeE + ttl_worked_from_homeM, 
                   ymin = ttl_worked_from_homeE - ttl_worked_from_homeM),
-              fill='lightgreen', alpha=.5)
+              fill='lightgreen', alpha=.5) + 
+  scale_y_continuous(labels = comma)
 ```
 
 ```{r}
