named another chunk that was unlabeled in pt4

--- a/posts/2024-09-15-tidycensus-exploration-pt4/index.qmd
+++ b/posts/2024-09-15-tidycensus-exploration-pt4/index.qmd
@@ -209,10 +209,7 @@ agg_combined_acs_data %>%
 ```
 
 
-
-
-
-```{r}
+```{r gt_state, include=TRUE}
 agg_combined_acs_data2 %>% 
   as.data.frame() %>% 
   select(NAME, Region, rank_wfh_population, ttl_worked_from_homeE, rank_perc_wfh_change, perc_wfh_change) %>% 
