--- a/posts/2024-08-13-tidycensus-exploration/index.qmd
+++ b/posts/2024-08-13-tidycensus-exploration/index.qmd
@@ -9,6 +9,7 @@ date: 08-13-2024
 categories: [R, tidyverse, mapping, gt, tidycensus, api] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
+code-annotations: hover
 image: us_child_poverty_map.png
 draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 editor: 
@@ -29,14 +30,20 @@ data in a nice table format.
 ```{r libraries, include=TRUE, warning=FALSE, message=FALSE}
 library(tidyverse)
 library(tidycensus)
-library(scales)
-library(janitor)
-library(glue)
-library(gt)
+library(scales) # <1>
+library(janitor) # <2>
+library(glue) # <3>
+library(gt) # <4>
 library(usmap)
 
-# census_api_key('INSERT KEY HERE')
+# census_api_key('INSERT KEY HERE') # <5>
 ```
+
+1. Loading the `scales::` package to transform ggplot scales simply (some people choose to explicitly define `scales::` in their code rather than loading the library).
+2. The `janitor::clean_names()` function tidies the column names of your dataset to use the snake case convention. Very handy!
+3. The `glue::` package allows for simple addition of HTML to ggplot graphics.
+4. The `gt::` library provides functionality for creating ggplot-esque tables.
+5. The first time that you're working with the `tidycensus::` package, you need to request an API key at https://api.census.gov/data/key_signup.html. The `install=` argument will install your personal key to the .Renviron file, and you won't need to use the `census_api_key()` function again.  
 
 ```{r my.theme, include=TRUE, echo=FALSE}
 my.theme <- theme(
@@ -96,9 +103,10 @@ thousands of data series that are available through the U.S. Census API.
 
 ```{r inspect_variables, include=TRUE}
 load_variables(2022, "acs5", cache = TRUE) %>% 
-  # used this to search for some Under 5 years variables of interest
-  filter(str_detect(label, "Under 5 years"))
+  filter(str_detect(label, "Under 5 years")) # <6>
 ```
+
+6. This searches all variable labels for "Under 5 years" to help identify data of interest.
 
 For this demo, I'll use the following series:
 
